--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,15 @@
-html {
-  font-family: "Open Sans", sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
 }
 
 .row::after {
@@ -96,9 +106,10 @@ html {
 body {
   max-width: max-content;
   margin: auto;
+  font-family: "Poppins", sans-serif;
 }
 
 img {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
 }
