--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,24 @@ ul {
 
 /* Untuk tampilan handphone: */
 [class*="col-"] {
+  float: left;
   width: 100%;
+}
+
+@media only screen and (max-width: 768px) {
+  body {
+    font-size: 16px;
+  }
+
+  h1 {
+    font-size: 1.3em;
+  }
+
+  .hero > div {
+    margin-top: 40vh;
+    padding: 0 20px;
+    color: white;
+  }
 }
 
 @media only screen and (min-width: 600px) {
@@ -65,6 +82,21 @@ ul {
 
 @media only screen and (min-width: 768px) {
   /* Untuk desktop: */
+
+  body {
+    font-size: 18px;
+  }
+  
+  h1 {
+    font-size: 1.5em;
+  }
+
+  .hero > div {
+    margin-top: 50vh;
+    padding: 0 20vw;
+    color: white;
+  }
+
   .col-1 {
     width: 8.33%;
   }
@@ -105,11 +137,14 @@ ul {
 
 body {
   max-width: max-content;
-  margin: auto;
+  margin: 0 auto;
   font-family: "Poppins", sans-serif;
+  scroll-behavior: smooth;
 }
 
-img {
-  max-width: 100%;
-  height: auto;
+.hero {
+  background: linear-gradient(to top, #00000073, #00000073), url(../img/pexels-cottonbro-6208699.jpg) no-repeat top center;
+  background-size: cover;
+  /* background: linear-gradient(to top, #3204fdba, #9907facc), url(https://picsum.photos/1280/853/?random=1) no-repeat center;   */
+  height: 100vh;
 }
