--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,17 @@
   box-sizing: border-box;
 }
 
-a {
+a, a:visited {
   text-decoration: none;
+  color: #9fd8ed;
 }
 
 ul {
   list-style: none;
+}
+
+.row {
+  padding: 30px;
 }
 
 .row::after {
@@ -18,14 +23,15 @@ ul {
   display: table;
 }
 
-/* Untuk tampilan handphone: */
 [class*="col-"] {
   float: left;
   width: 100%;
+  padding: 5px;
 }
 
 @media only screen and (max-width: 768px) {
-  body {
+  /* Untuk tampilan handphone: */
+  body, .button {
     font-size: 16px;
   }
 
@@ -33,8 +39,17 @@ ul {
     font-size: 1.3em;
   }
 
+  h2 {
+    font-size: 1.1em;
+  }
+
+  h3 {
+    font-size: 1em;
+    font-weight: 700;
+  }
+
   .hero > div {
-    margin-top: 40vh;
+    margin-top: 20vh;
     padding: 0 20px;
     color: white;
   }
@@ -86,13 +101,26 @@ ul {
   body {
     font-size: 18px;
   }
-  
+
   h1 {
     font-size: 1.5em;
   }
 
+  h2 {
+    font-size: 1.1em;
+  }
+
+  h3 {
+    font-size: 1em;
+    font-weight: 700;
+  }
+
+  .button {
+    font-size: 20px;
+  }
+
   .hero > div {
-    margin-top: 50vh;
+    margin-top: 30vh;
     padding: 0 20vw;
     color: white;
   }
@@ -143,8 +171,25 @@ body {
 }
 
 .hero {
-  background: linear-gradient(to top, #00000073, #00000073), url(../img/pexels-cottonbro-6208699.jpg) no-repeat top center;
+  background: linear-gradient(to top, #000000d5, #000000a6),
+    url(../img/pexels-cottonbro-6208699.jpg) no-repeat top center;
   background-size: cover;
-  /* background: linear-gradient(to top, #3204fdba, #9907facc), url(https://picsum.photos/1280/853/?random=1) no-repeat center;   */
   height: 100vh;
+}
+
+.button {
+  border-radius: 2px;
+  background-color: #EF7B45;
+  padding: 10px 24px;
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.button-submit {
+  background-color: #9fd8ed;
 }
