--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,12 @@
 .footer {
     background-color: #042A2B;
     color: white;
-    padding: 30px;
-    /* margin-top: -10px; */
+    text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+    .footer {
+        padding: 30px 20vh;
+        text-align: left;
+    }
 }
