--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,6 @@
 .header-container {
   position: fixed;
-  height: 100%;
+  /* height: 100%; */
   width: 100%;
 }
 
@@ -11,7 +11,7 @@
   padding: 15px 0;
   z-index: 1;
   position: absolute;
-  opacity: 0.8;
+  /* opacity: 0.8; */
   top: 0;
 }
 
@@ -64,6 +64,7 @@
     margin-left: 30px;
     width: fit-content;
     position: relative;
+    overflow: visible;
   }
   .menu li {
     float: left;
@@ -92,8 +93,7 @@
   width: 24px;
 }
 
-.hamb-line::before,
-.hamb-line::after{
+.hamb-line::before, .hamb-line::after{
   background: #042A2B;
   content: '';
   display: block;
@@ -102,9 +102,11 @@
   transition: all .2s ease-out;
   width: 100%;
 }
+
 .hamb-line::before{
   top: 5px;
 }
+
 .hamb-line::after{
   top: -5px;
 }
@@ -126,4 +128,42 @@
 .side-menu:checked ~ .hamb .hamb-line::after {
   transform: rotate(45deg);
   top:0;
+}
+
+.dropbtn {
+  display: inline-block;
+  text-align: left;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* .dropdown:hover .dropbtn {
+  background-color: #9fd8ed;
+  opacity: 0.8;
+} */
+
+/* li.dropdown {
+  display: inline-block;
+} */
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #9fd8ed;
+  /* opacity: 0.8; */
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: #042A2B;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
