--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,12 @@ ul {
   }
 }
 
+@media only screen and (min-width: 1920px) {
+  .row {
+    padding : 30px 20vh;
+  }
+}
+
 body {
   max-width: max-content;
   margin: 0 auto;
