--- a/css/footer.css
+++ b/css/footer.css
@@ -1,12 +1,23 @@
 .footer {
-    background-color: #042A2B;
-    color: white;
-    text-align: center;
+  background-color: #042a2b;
+  color: white;
+  text-align: center;
 }
 
 @media screen and (min-width: 768px) {
-    .footer {
-        padding: 30px 20vh;
-        text-align: left;
-    }
+  .footer {
+    padding: 30px 20vh;
+    text-align: left;
+  }
+}
+
+a.footerlink,
+a.footerlink:visited {
+  text-decoration: none;
+  font-weight: normal;
+  color: #9fd8ed;
+}
+
+a.footerlink:hover {
+  color: #ef7b45;
 }
