--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ ul {
 }
 
 .row {
-  padding: 30px;
+  padding: 25px;
 }
 
 .row::after {
@@ -31,7 +31,7 @@ ul {
 [class*="col-"] {
   float: left;
   width: 100%;
-  padding: 5px;
+  padding: 10px;
 }
 
 @media only screen and (max-width: 768px) {
@@ -41,7 +41,7 @@ ul {
   }
 
   h1 {
-    font-size: 1.3em;
+    font-size: 1.2em;
   }
 
   h2 {
@@ -57,6 +57,10 @@ ul {
     margin-top: 20vh;
     padding: 0 20px;
     color: white;
+  }
+
+  p {
+    margin-bottom: 15px;
   }
 }
 
@@ -98,13 +102,16 @@ ul {
   .col-s-12 {
     width: 100%;
   }
+  p {
+    margin-bottom: 15px;
+  }
 }
 
 @media only screen and (min-width: 768px) {
   /* Untuk desktop: */
 
   body {
-    font-size: 18px;
+    font-size: 16px;
   }
 
   h1 {
@@ -112,7 +119,7 @@ ul {
   }
 
   h2 {
-    font-size: 1.1em;
+    font-size: 1.3em;
   }
 
   h3 {
@@ -125,8 +132,8 @@ ul {
   }
 
   .hero > div {
-    margin-top: 30vh;
-    padding: 0 20vw;
+    margin-top: 35vh;
+    padding: 0 15vw;
     color: white;
   }
 
@@ -165,6 +172,9 @@ ul {
   }
   .col-12 {
     width: 100%;
+  }
+  p {
+    margin-bottom: 20px;
   }
 }
 
@@ -210,7 +220,17 @@ body {
 }
 
 .section-dark {
-  background-color: #000202;
+  background-color: #345995;
   color: white;
   text-align: center;
+}
+
+.div-wrapper {
+  height: 160px;  
+  vertical-align: bottom;
+  display: table-cell;
+}
+
+.div-wrapper img {
+  vertical-align: bottom;
 }
