--- a/css/header.css
+++ b/css/header.css
@@ -5,8 +5,8 @@
 }
 
 .header {
-  background-color: #9fd8ed;
-  color: #042A2B;
+  background-color: #151F62;
+  color: #EEEEEE;
   width: 100%;
   padding: 15px 0;
   z-index: 1;
@@ -28,7 +28,7 @@
 
 /* mobile navigation menu */
 .nav {
-  background-color: #9fd8ed;
+  background-color: #151F62;
   max-height: 0;
   transition: max-height 0.5s ease-out;
   width: 100%;
@@ -45,11 +45,11 @@
 .menu a {
   display: block;
   padding: 15px;
-  color: #042A2B;
+  color: #EEEEEE;
 }
 
 .menu a:hover {
-  background-color: #EF7B45;
+  background-color: #F4E04D;
 }
 
 @media (min-width: 769px) {
@@ -71,7 +71,7 @@
   }
   .menu a:hover {
     background-color: transparent;
-    color: #EF7B45;
+    color: #F4E04D;
   }
 
   .hamb {
@@ -86,7 +86,7 @@
 }
 
 .hamb-line {
-  background: #042A2B;
+  background: #EEEEEE;
   display: block;
   height: 2px;
   position: relative;
@@ -94,7 +94,7 @@
 }
 
 .hamb-line::before, .hamb-line::after{
-  background: #042A2B;
+  background: #EEEEEE;
   content: '';
   display: block;
   height: 100%;
@@ -151,7 +151,7 @@
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #9fd8ed;
+  background-color: #151F62;
   /* opacity: 0.8; */
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -159,7 +159,7 @@
 }
 
 .dropdown-content a {
-  color: #042A2B;
+  color: #EEEEEE;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
@@ -168,4 +168,21 @@
 
 .dropdown:hover .dropdown-content {
   display: block;
+}
+
+.button-header {
+  border-radius: 6px;
+  background-color: #EEEEEE;
+  padding: 10px 24px;
+  border: none;
+  color: #151F62;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
+  vertical-align: middle;
+}
+
+.button-header:hover {
+  color: #F4E04D;
 }
