--- a/css/header.css
+++ b/css/header.css
@@ -49,7 +49,7 @@
 }
 
 .menu a:hover {
-  background-color: #F4E04D;
+  background-color: #F18F01;
 }
 
 @media (min-width: 769px) {
@@ -71,7 +71,7 @@
   }
   .menu a:hover {
     background-color: transparent;
-    color: #F4E04D;
+    color: #F18F01;
   }
 
   .hamb {
@@ -151,7 +151,7 @@
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #151F62;
+  background-color: #10054D;
   /* opacity: 0.8; */
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -184,5 +184,5 @@
 }
 
 .button-header:hover {
-  color: #F4E04D;
+  color: #F18F01;
 }
