--- a/css/header.css
+++ b/css/header.css
@@ -173,14 +173,16 @@
 .button-header {
   border-radius: 6px;
   background-color: #EEEEEE;
-  padding: 10px 24px;
+  padding: 14px 24px;
   border: none;
   color: #151F62;
   text-align: center;
   text-decoration: none;
+  font-weight: 700;
   display: inline-block;
   cursor: pointer;
   vertical-align: middle;
+  margin-left: 15px;
 }
 
 .button-header:hover {
