--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,7 @@ ul {
   }
 }
 
-@media only screen and (min-width: 1600px) {
+@media only screen and (min-width: 1440px) {
   .row {
     padding-left: 20vh;
     padding-right: 20vh;
@@ -261,7 +261,7 @@ body {
   color: #345995;
   text-align: center;
   border-radius: 6px;
-  margin: 10px 10px;
+  margin: 0px 10px 10px 10px;
   padding: 30px;
 }
 
@@ -270,6 +270,8 @@ body {
   border-radius: 6px;
   color: white;
   text-align: center;
+  margin: 0px 10px 10px 10px;
+  padding: 30px;
 }
 
 .block-dark {
