--- a/css/style.css
+++ b/css/style.css
@@ -197,7 +197,7 @@ body {
 
 .hero {
   background: linear-gradient(to top, #000000d5, #000000a6),
-    url(../img/pexels-cottonbro-6208699.jpg) no-repeat top center;
+    url(../img/pexels-katerina-holmes-5905445.jpg) no-repeat bottom center;
   background-size: cover;
   height: 100vh;
 }
