--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,12 @@ body {
   max-width: max-content;
   margin: 0 auto;
   font-family: "Poppins", sans-serif;
+  line-height: 1.2;
   scroll-behavior: smooth;
+}
+
+h1, h2, h3 {
+  margin-bottom: 8px;
 }
 
 a, a:visited {
@@ -22,6 +27,13 @@ a:hover {
 
 ul {
   list-style: none;
+}
+
+p {
+  text-align:justify;
+  word-spacing: -2px;
+  word-break: break-word;
+  text-justify: distribute;
 }
 
 .row {
@@ -42,7 +54,7 @@ ul {
 }
 
 .row-bottom > div {
-  padding-bottom: 0 !important;
+  padding-bottom: 0;
   margin-bottom: 0 !important;
 }
 
@@ -65,6 +77,10 @@ ul {
     font-weight: 700;
   }
 
+  h1, h2, h3 {
+    text-align: center;
+  }
+
   .hero > div {
     margin-top: 20vh;
     padding: 0 20px;
@@ -73,13 +89,23 @@ ul {
 
   p {
     margin-bottom: 15px;
+    text-align: center;
   }
-}
 
-@media only screen and (min-width: 600px) {
-  /* Untuk tablet: */
-  p {
-    margin-bottom: 15px;
+  .row {
+    flex-flow: column wrap;
+  }
+
+  .row-bottom {
+    padding-bottom: 30px !important;
+  }
+
+  .after_bottom {
+    margin-top: 0px !important;
+  }
+
+  .inside-box {
+    padding: 30px 0 30px 0 !important;
   }
 }
 
@@ -91,11 +117,11 @@ ul {
   }
 
   h1 {
-    font-size: 30px;
+    font-size: 34px;
   }
 
   h2 {
-    font-size: 26px;
+    font-size: 28px;
   }
 
   h3 {
@@ -112,6 +138,7 @@ ul {
     padding: 0 15vw;
     color: white;
   }
+
   p {
     margin-bottom: 20px;
   }
@@ -138,7 +165,8 @@ ul {
 }
 
 .button:hover {
-  color: #F18F01;
+  color: #151F62;
+  background-color: #F18F01;
 }
 
 .button-submit {
@@ -169,31 +197,31 @@ ul {
 
 .div-wrapper {
   height: 160px;  
-  vertical-align: bottom;
   display: table-cell;
 }
 
 .div-wrapper img {
   vertical-align: bottom;
+  max-width: 150px;
 }
 
 .block-light {
   background-color: white;
   border-radius: 16px;
   color: #345995;
-  text-align: center;
+  text-align: justify;
   border-radius: 6px;
   margin: 0px 10px 10px 10px;
-  padding: 30px;
+  padding: 30px !important;
 }
 
 .block-mid {
   background-color: #787A91;
   border-radius: 16px;
   color: white;
-  text-align: center;
+  text-align: justify;
   margin: 0px 10px 10px 10px;
-  padding: 30px;
+  padding: 30px !important;
 }
 
 .block-dark {
@@ -201,7 +229,6 @@ ul {
   border-radius: 16px;
   color: white;
   text-align: justify;
-  text-justify: auto;
   margin: 0px 10px 10px 10px;
   padding: 30px !important;
 }
