--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,11 @@ body {
 }
 
 h1 {
-  font-size: 1.4em;
+  font-size: 1.5em;
 }
 
 h2 {
-  font-size: 1.2em;
+  font-size: 1.3em;
 }
 
 h3 {
@@ -31,7 +31,7 @@ h4 {
   font-weight: bolder;
 }
 
-h1, h2, h3, h4 {
+h1, h2, h3 {
   margin-bottom: 8px;
 }
 
@@ -193,8 +193,6 @@ p {
   border-radius: 16px;
   color: #345995;
   border-radius: 6px;
-  margin: 0px 10px 10px 10px;
-  padding: 30px !important;
   align-self: stretch;
 }
 
@@ -202,8 +200,6 @@ p {
   background-color: #787A91;
   border-radius: 16px;
   color: white;
-  margin: 0px 10px 10px 10px;
-  padding: 30px !important;
   align-self: stretch;
 }
 
@@ -211,9 +207,13 @@ p {
   background-color: #345995;
   border-radius: 16px;
   color: white;
-  margin: 0px 10px 10px 10px;
-  padding: 30px !important;
   align-self: stretch;
+}
+
+.selamat {
+  max-width: 200px; 
+  margin-left:auto; 
+  margin-right:auto;
 }
 
 @media only screen and (min-width: 768px) {
@@ -271,5 +271,9 @@ p {
 
   .hero {
     align-items: center;
+  }
+
+  .selamat {
+    max-width: 1600px;
   }
 }
