--- a/css/header.css
+++ b/css/header.css
@@ -17,11 +17,13 @@
   vertical-align: middle;
   display: inline-block;
   margin-left: 20px;
+  margin-bottom: 4px;
 }
 
 .title {
   vertical-align: middle;
   display: inline-block;
+  margin-bottom: 3px;
 }
 
 /* mobile navigation menu */
@@ -132,7 +134,7 @@
 .button-header {
   border-radius: 24px;
   background-color: #EEEEEE;
-  padding: 14px 24px;
+  padding: 5px 24px;
   border: none;
   color: #151F62;
   text-align: center;
@@ -142,6 +144,7 @@
   cursor: pointer;
   vertical-align: middle;
   margin-left: 15px;
+  margin-top: 8px;
 }
 
 .button-header:hover {
