--- a/css/style.css
+++ b/css/style.css
@@ -141,8 +141,13 @@ p {
   background-color: #F18F01;
 }
 
-.button-submit {
-  background-color: #9fd8ed;
+.button-white {
+  background-color: #EEEEEE;
+  color: #151F62;
+}
+
+.button-white:hover {
+  background-color: #F18F01;
 }
 
 .section-light {
@@ -182,7 +187,6 @@ p {
 .block-transparent {
   border-radius: 16px;
   color: white;
-  border-radius: 6px;
   margin: 0px 10px 10px 10px;
   padding: 30px !important;
   align-self: stretch;
@@ -192,7 +196,6 @@ p {
   background-color: white;
   border-radius: 16px;
   color: #345995;
-  border-radius: 6px;
   align-self: stretch;
 }
 
@@ -211,13 +214,23 @@ p {
 }
 
 .selamat {
-  max-width: 200px; 
+  max-width: 180px; 
   margin-left:auto; 
   margin-right:auto;
 }
 
+.cta-block {
+  max-width: 1400px;
+}
+
+.cta-fill {
+  margin: 0 !important;
+  padding: 5px !important;
+}
+
+
+/* Untuk desktop: */
 @media only screen and (min-width: 768px) {
-  /* Untuk desktop: */
   body {
     font-size: 16px;
   }
@@ -275,5 +288,13 @@ p {
 
   .selamat {
     max-width: 1600px;
+  }
+
+  .cta-block {
+    padding: 40px !important;
+  }
+
+  .cta-fill {
+    margin: 20px !important;
   }
 }
