--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  max-width: max-content;
+  /* max-width: max-content; */
   margin: 0 auto;
   font-family: "Poppins", sans-serif;
   font-size: 14px;
@@ -31,17 +31,20 @@ h4 {
   font-weight: bolder;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   margin-bottom: 8px;
 }
 
-a, a:visited {
+a,
+a:visited {
   text-decoration: none;
-  color: #151F62;
+  color: #151f62;
 }
 
 a:hover {
-  color: #F18F01;
+  color: #f18f01;
 }
 
 ul {
@@ -55,6 +58,18 @@ p {
   text-justify: distribute;
 }
 
+.white {
+  color: #fff;
+}
+
+.primary {
+  color: #151f62;
+}
+
+.accent {
+  color: #f18f01;
+}
+
 .big-font {
   font-size: 5em;
   font-weight: bolder;
@@ -65,14 +80,14 @@ p {
 }
 
 .underlined {
-  text-decoration: underline #F18F01;
+  text-decoration: underline #f18f01;
   text-underline-offset: 8px;
   text-decoration-thickness: 3px;
   margin-bottom: 20px;
 }
 
 .head2 {
-  color: #151F62;
+  color: #151f62;
 }
 
 .row {
@@ -81,6 +96,20 @@ p {
   align-items: center;
   justify-content: space-evenly;
   padding: 25px;
+}
+
+.row-up {
+  align-items: flex-start;
+}
+
+.row-form {
+  padding: 0px; 
+  flex-direction: row;
+}
+
+.row-form > div {
+  padding: 5px !important; 
+  margin: 5px !important;
 }
 
 .img-bottom {
@@ -111,20 +140,23 @@ p {
 }
 
 .hero {
-  background: linear-gradient(to top, #000000d5, #000000a6),
-    url(../img/pexels-katerina-holmes-5905445.jpg) no-repeat bottom center;
   background-size: cover;
   height: 100vh;
 }
 
-.hero > div {
-  padding: 0 20px;
-  color: white;
+.hero-front {
+  background: linear-gradient(to top, #000000d5, #000000a6),
+    url(../img/pexels-katerina-holmes-5905445.jpg) no-repeat bottom center;
+}
+
+.first-row {
+  min-height: 120px;
+  padding-top: 100px;
 }
 
 .button {
   border-radius: 24px;
-  background-color: #151F62;
+  background-color: #151f62;
   padding: 10px 24px;
   border: none;
   color: white;
@@ -137,17 +169,17 @@ p {
 }
 
 .button:hover {
-  color: #151F62;
-  background-color: #F18F01;
+  color: #151f62;
+  background-color: #f18f01;
 }
 
 .button-white {
-  background-color: #EEEEEE;
-  color: #151F62;
+  background-color: #eeeeee;
+  color: #151f62;
 }
 
 .button-white:hover {
-  background-color: #F18F01;
+  background-color: #f18f01;
 }
 
 .section-light {
@@ -156,7 +188,7 @@ p {
 }
 
 .section-mid {
-  background-color: #787A91 !important;
+  background-color: #787a91 !important;
   color: white;
   padding-top: 50px;
   padding-bottom: 50px;
@@ -170,12 +202,13 @@ p {
 }
 
 .ornament-up {
-  background: url(../img/abstract-mesh-vector-background-futuristic-technology-style-card-lines-point-planes-3d-space_22987440-01.png) no-repeat bottom left; 
+  background: url(../img/abstract-mesh-vector-background-futuristic-technology-style-card-lines-point-planes-3d-space_22987440-01.png)
+    no-repeat bottom left;
   background-size: cover;
 }
 
 .div-wrapper {
-  height: 160px;  
+  height: 160px;
   display: table-cell;
 }
 
@@ -186,10 +219,15 @@ p {
 
 .block-transparent {
   border-radius: 16px;
-  color: white;
+  color: #345995;
   margin: 0px 10px 10px 10px;
   padding: 30px !important;
   align-self: stretch;
+}
+
+.block-transparent:hover {
+  background-color: #345995;
+  color: white;
 }
 
 .block-light {
@@ -199,8 +237,12 @@ p {
   align-self: stretch;
 }
 
+.block-light:hover {
+  background-color: #f18f01;
+}
+
 .block-mid {
-  background-color: #787A91;
+  background-color: #787a91;
   border-radius: 16px;
   color: white;
   align-self: stretch;
@@ -214,9 +256,9 @@ p {
 }
 
 .selamat {
-  max-width: 180px; 
-  margin-left:auto; 
-  margin-right:auto;
+  max-width: 180px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .cta-block {
@@ -227,7 +269,6 @@ p {
   margin: 0 !important;
   padding: 5px !important;
 }
-
 
 /* Untuk desktop: */
 @media only screen and (min-width: 768px) {
@@ -296,5 +337,9 @@ p {
 
   .cta-fill {
     margin: 20px !important;
+  }
+
+  .row-form {
+    text-align: left;
   }
 }
