--- a/css/style.css
+++ b/css/style.css
@@ -270,6 +270,39 @@ p {
   padding: 5px !important;
 }
 
+.form-flex {
+  max-width: 200px;
+  margin: 0 auto;
+}
+
+.form-flex li {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.form-flex > li > label,
+.form-flex li p {
+  flex: 1 0 120px;
+  max-width: 200px;
+  text-align: left;
+}
+
+.form-flex > li > label + * {
+  flex: 1 0 200px;
+}
+
+.form-flex li input,
+.form-flex li textarea {
+  padding: 15px;
+}
+
+.img-box {
+  width: 55vw;
+  display: block; 
+  margin-left: 0; 
+  margin-bottom: 8px;
+}
+
 /* Untuk desktop: */
 @media only screen and (min-width: 768px) {
   body {
@@ -341,5 +374,13 @@ p {
 
   .row-form {
     text-align: left;
+  }
+
+  .form-flex {
+    max-width: 800px;
+  }
+
+  .img-box {
+    width: 30vw;
   }
 }
