--- a/css/footer.css
+++ b/css/footer.css
@@ -12,7 +12,7 @@ a.footerlink:visited {
 }
 
 a.footerlink:hover {
-  color: #F4E04D;
+  color: #F18F01;
 }
 
 @media screen and (min-width: 768px) {
