--- a/css/footer.css
+++ b/css/footer.css
@@ -15,9 +15,9 @@ a.footerlink:hover {
   color: #F18F01;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1024px) {
   .footer {
-    padding: 30px 20vh;
+    padding: 30px 10vh 0px 10vh;
     text-align: left;
   }
 }
