--- a/css/footer.css
+++ b/css/footer.css
@@ -15,6 +15,34 @@ a.footerlink:hover {
   color: #F18F01;
 }
 
+.icon-bar {
+  position: fixed;
+  top: 87%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.icon-bar a {
+  display: block;
+  text-align: center;
+  padding: 16px;
+  transition: all 0.3s ease;
+  color: white;
+  font-size: 20px;
+}
+
+.icon-bar a:hover {
+  background-color: #F18F01;
+  opacity: 1;
+}
+
+.social {
+  background: #3B5998;
+  color: white;
+  opacity: 0.7;
+}
+
 @media screen and (min-width: 1024px) {
   .footer {
     padding: 30px 10vh 0px 10vh;
